--- a/src/my_coding_agent/assets/themes/dark.qss
+++ b/src/my_coding_agent/assets/themes/dark.qss
@@ -43,26 +43,26 @@ QTreeView::item:hover {
     background-color: #3a3a3a;
 }
 
-/* Tree branch indicators for collapsed folders (right arrow) */
+/* Tree branch indicators for collapsed folders (right-pointing triangle) */
 QTreeView::branch:has-children:!has-siblings:closed,
 QTreeView::branch:closed:has-children:has-siblings {
-    width: 12px;
-    height: 12px;
-    background-color: #555555;
-    border: 1px solid #777777;
-    border-radius: 2px;
-    margin: 2px;
+    width: 0px;
+    height: 0px;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 8px solid #888888;
+    margin: 4px 6px;
 }
 
-/* Tree branch indicators for expanded folders (down arrow) */
+/* Tree branch indicators for expanded folders (down-pointing triangle) */
 QTreeView::branch:open:has-children:!has-siblings,
 QTreeView::branch:open:has-children:has-siblings {
-    width: 12px;
-    height: 12px;
-    background-color: #666666;
-    border: 1px solid #888888;
-    border-radius: 2px;
-    margin: 2px;
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 8px solid #888888;
+    margin: 6px 4px;
 }
 
 /* Text Edit (Code Viewer) */
