--- a/src/my_coding_agent/assets/themes/light.qss
+++ b/src/my_coding_agent/assets/themes/light.qss
@@ -30,26 +30,26 @@ QTreeView::item:hover {
     background-color: #e6f3ff;
 }
 
-/* Tree branch indicators for collapsed folders */
+/* Tree branch indicators for collapsed folders (right-pointing triangle) */
 QTreeView::branch:has-children:!has-siblings:closed,
 QTreeView::branch:closed:has-children:has-siblings {
-    width: 12px;
-    height: 12px;
-    background-color: #e0e0e0;
-    border: 1px solid #b0b0b0;
-    border-radius: 2px;
-    margin: 2px;
+    width: 0px;
+    height: 0px;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 8px solid #666666;
+    margin: 4px 6px;
 }
 
-/* Tree branch indicators for expanded folders */
+/* Tree branch indicators for expanded folders (down-pointing triangle) */
 QTreeView::branch:open:has-children:!has-siblings,
 QTreeView::branch:open:has-children:has-siblings {
-    width: 12px;
-    height: 12px;
-    background-color: #d0d0d0;
-    border: 1px solid #a0a0a0;
-    border-radius: 2px;
-    margin: 2px;
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 8px solid #666666;
+    margin: 6px 4px;
 }
 
 /* Text Edit (Code Viewer) */
